2013-08-19  Peter Schueller <peterschueller@sabanciuniv.edu>

	Release 2.2.0
	* NEWS: summarizing changes
	* src/Makefile.am: Increasing Version numbers.
	* configure.ac: Likewise.

2013-05-22  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/Registry.h: Introduce auxiliary variable
	symbols.
	* src/Registry.cpp: Likewise.
	* include/dlvhex2/FunctionPlugin.h: Add rewriter to transform
	Gringo function syntax to external atoms.
	* src/FunctionPlugin.cpp: Likewise.

2013-04-27  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/FunctionPlugin.h: Implement external atoms for
	function symbol processing.
	* src/FunctionPlugin.cpp: Likewise.

2013-04-25  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/HexGrammar.tcc: Add basic support for function
	symbols.
	* include/dlvhex2/HexGrammar.h: Likewise.
	* include/dlvhex2/Registry.h: Likewise.
	* include/dlvhex2/Term.h: Likewise.
	* src/Registry.cpp: Likewise.
	* src/Term.cpp: Likewise.
	* src/Printer.cpp: Likewise.

2013-03-12  Christoph Redl <redl@kr.tuwien.ac.at>

	* include/dlvhex2/LiberalSafetyChecker.h: Implement plugin interface for
	safety checkers.
	* src/LiberalSafetyChecker.cpp: Likewise.

2013-03-04  Peter Schueller <peterschueller@sabanciuniv.edu>

	* include/dlvhex2/ClaspSolver.h: More efficiency improvments by using
	different data structures/algorithms.
	* src/ClaspSolver.cpp: Likewise.

2013-01-27  Peter Schueller <peterschueller@sabanciuniv.edu>

	* src/dlvhex.cpp: Handling signals to shutdown and display statistics.

2013-01-21  Peter Schueller <peterschueller@sabanciuniv.edu>

	* include/dlvhex2/ManualEvalHeuristicsPlugin.h: Plugin for manually
	specifying evaluation units.
	* src/ManualEvalHeuristicsPlugin.cpp: Likewise.
	* examples/extatom1_manualunits*.hex: Likewise.

2013-01-14  Peter Schueller <peterschueller@sabanciuniv.edu>

	* include/dlvhex2/ClaspSolver.h: Making clasp-to-HEX propagation more
	performant by changing data structures, making it relative, and limiting